Adding LCD capability.  Beware it a) draws a lot of power and b) will lock up the device if not connected properly

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/util.embedded"]
 	path = lib/util.embedded
 	url = git@github.com:malachib/util.embedded.git
+[submodule "lib/TinyWireM"]
+	path = lib/TinyWireM
+	url = https://github.com/adafruit/TinyWireM.git
